# MotorControllerFirmware

./: .cproject  .gitignore  .gitmodules  .mxproject  .project_org  CMakeLists.txt  CMakeLists_template.txt  README.md  mcu2.ioc  mcu2.xml  meson.build  st_nucleo_f4.cfg  vcpkg-configuration.json
.github/workflows/: .cmake.yml.swp  cmake.yml
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: main.c  myFifo.cpp  myFifo.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_ll_adc.h
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_adc_ex.c  stm32f4xx_hal_exti.c  stm32f4xx_hal_flash_ex.c  stm32f4xx_hal_pwr.c
USB_DEVICE/App/: usbd_cdc_if.c
scripts/: Dockerfile  arm-toolchain.cmake  docker-compose.yml
signalProcessing/: CMakeLists.txt  serialmonitor.py
signalProcessing/public/: cppmain.h
signalProcessing/src/: ChainableObserver.cpp  ChainableObserver.h  KalmanFilter.cpp  KalmanFilter.h  cppmain.cpp  embededJson.cpp  hal.h  signal.h  signal.hpp
signalProcessing/test/: CMakeLists.txt  main.cc
